--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valami</title>
+    <title>Layout</title>
 </head>
 
 <link rel="stylesheet" href="style.css">
 
 <body>
-
+    <main>
+        <header>
+            fejléc 
+        </header>
+        <nav>menu</nav>
+        <section>
+            <h1>lorem ipsum</h1>
+            <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque tenetur aliquam exercitationem maiores vero dignissimos rerum, ab commodi dicta sit voluptate repellat suscipit enim praesentium, ea voluptatem eaque porro quae.</span><span>Iure quaerat quas voluptate. Sunt repellendus voluptates maiores, at rerum qui quia eveniet vitae ea. Enim, quibusdam, soluta facilis repellendus quisquam temporibus sequi corporis, dicta excepturi amet voluptatum alias laudantium!</span></p>
+            <p><span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, recusandae. In unde reiciendis sit maxime delectus. Voluptatum quisquam nostrum rem saepe voluptas, minus praesentium tempora magnam accusamus nihil alias quis!</span><span>Asperiores dignissimos iure velit veritatis, numquam eum officia in inventore quam id soluta hic, itaque harum, quod natus dolore ab. Obcaecati, ab fugit? Laborum, iure at perferendis asperiores deleniti ex.</span></p>
+            <p><span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque illo sed, id quidem atque, nesciunt ad saepe a rerum debitis vel quaerat harum obcaecati? Veniam doloremque perferendis neque nulla sequi!</span><span>Fugiat animi magni, ducimus adipisci pariatur hic facilis ad vitae illo obcaecati ex voluptate beatae vero accusantium molestias ipsa expedita modi! Hic deleniti nulla eaque repellat molestias ratione illum quasi?</span></p>
+            <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic cupiditate cum corrupti magni minima ipsum beatae atque sint quis ut, eaque quo aspernatur. Quod consequatur nulla porro itaque aspernatur? Optio.</span><span>Maxime, necessitatibus doloremque. Laboriosam corporis inventore similique eos ab commodi in. Nam laborum minus vel, nemo provident iure id dolor vitae quas atque modi magnam dolorem voluptatem tempore! Corporis, pariatur?</span></p>
+        </section>
+        <aside>oldalsáv</aside>
+        <footer>lábléc</footer>
+    </main>
 </body>
 
 </html>
