--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     modi magnam dolorem voluptatem tempore! Corporis, pariatur?</span></p>
         </section>
         <aside>oldalsáv</aside>
+        <div class="clear"></div>
         <footer>lábléc</footer>
     </main>
 </body>
